# stroemnet

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml
contracts/ethereum/script/: Deploy.s.sol  StroemHTLCV1.sol
contracts/ethereum/test/: StroemHTLCV1.sol
crates/amounts/: Cargo.toml
crates/amounts/src/: amount_out.rs  error.rs  lib.rs  result.rs  storage.rs
crates/data/: Cargo.toml
crates/data/src/: buffer.rs  error.rs  lib.rs  store.rs  types.rs
crates/data/src/chains/: mod.rs  net.rs
crates/data/src/chains/evm/: broadcast.rs  buffer.rs  config.rs  connect.rs  contracts.rs  decode.rs  emit.rs  finality.rs  mod.rs  persist.rs  poll.rs  provider.rs  reconcile.rs  replace.rs  settle.rs  settler.rs  signing.rs
crates/data/src/chains/evm/broadcast/: claim.rs  commit.rs  mod.rs  refund.rs
crates/data/src/chains/kaspa/: accessors.rs  broadcast.rs  buffer.rs  client.rs  config.rs  connect.rs  decode.rs  detector.rs  emit.rs  error.rs  mod.rs  persist.rs  poll.rs  reconcile.rs  settle.rs  settler.rs  signing.rs  test_helpers.rs
crates/data/src/chains/kaspa/broadcast/: commit.rs  fee.rs  htlc.rs  mod.rs  prepare.rs  refund.rs  reveal.rs  signer.rs  spend.rs  txbuild.rs  utxo.rs
crates/data/src/chains/kaspa/contracts/: contract_v1.rs  extract.rs  mod.rs  script.rs
crates/data/src/chains/kaspa/contracts/extract/: commitment.rs  mod.rs  opdata.rs  restore.rs  sig.rs
crates/data/src/chains/kaspa/contracts/tests/: mod.rs  script.rs  validation.rs
crates/data/src/chains/kaspa/decode/: block.rs  classify.rs  inputs.rs  mod.rs  outputs.rs  parse.rs
crates/data/src/chains/kaspa/intake/: confirm.rs  mod.rs  read.rs
crates/data/src/chains/kaspa/signing/: keys.rs  message.rs  mod.rs  p2sh.rs
crates/data/src/chains/record/: attempt.rs  codec.rs  error.rs  mod.rs  restore.rs  result.rs
crates/data/src/chains/settlement/: action.rs  engine.rs  metrics.rs  mod.rs  queue.rs  reconcile.rs  settler.rs
crates/data/src/sink/: forward.rs  mod.rs  registry.rs
crates/handler/: Cargo.toml
crates/handler/src/: address.rs  dispatch.rs  error.rs  get.rs  lib.rs  result.rs  test_fixtures.rs
crates/handler/src/handle/: commitment.rs  mod.rs  proposal.rs  refund.rs  reveal.rs
crates/handler/src/handle/commitment/: external.rs  internal.rs  mirror.rs  mod.rs
crates/node/: Cargo.toml
crates/node/src/: claim.rs  config.rs  connection.rs  coordinator.rs  error.rs  lib.rs  node.rs  result.rs
crates/node/src/config/: daemon.rs  load.rs  mod.rs  spec.rs
crates/node/src/connection/: accept.rs  dial.rs  mod.rs  read.rs  resolve.rs
crates/node/src/coordinator/: broadcast.rs  dispatch.rs  mod.rs  proposal.rs  request.rs  response.rs
crates/node/src/node/: apply.rs  build.rs  deposit.rs  driver.rs  mod.rs  services.rs  start.rs  state.rs  taker.rs
crates/node/src/oracle/: error.rs  mod.rs  result.rs
crates/node/src/oracle/fetch/: aggregate.rs  bybit.rs  gateio.rs  mexc.rs  mod.rs  retry.rs  robust.rs
crates/node/tests/: p2p_bridge.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: addr.rs  error.rs  identity.rs  lib.rs
crates/p2p/src/gossip/: mod.rs
crates/p2p/src/network/: config.rs  dial.rs  discovery.rs  mod.rs  relay.rs  state.rs
crates/p2p/src/peer/: handshake.rs  mod.rs
crates/p2p/src/transport/: mod.rs  native.rs  web.rs
crates/p2p/src/wire/: codec.rs  message.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: channels.rs  lib.rs  v1.rs
crates/protocol/src/clock/: mod.rs  native.rs  wasm.rs
crates/protocol/src/swap_tracker/: commit.rs  error.rs  expiry.rs  mod.rs  resolve.rs  result.rs  tests.rs
crates/protocol/src/v1/: addresses.rs  amount.rs  commitment.rs  event.rs  mod.rs  refund.rs  reveal.rs
crates/storage/: Cargo.toml
crates/storage/src/: cursors.rs  error.rs  lib.rs  peers.rs  quarantine.rs  swaps.rs
crates/storage/src/swaps/: mod.rs  store.rs  table.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: fixtures.rs  lib.rs  network.rs
crates/test-harness/tests/: ccr_rescue.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: address_validation.rs  lib.rs  prices.rs
crates/wasm/src/defaults/: bootstrap_nodes.rs  channel_configurations.rs  gateway_configuration.rs  mod.rs
crates/wasm/src/gateway/: config.rs  connect.rs  event_listeners.rs  inner.rs  mod.rs  swaps.rs
