[package]
name = "stroemnet-amounts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stroemnet-protocol = { path = "../protocol" }
ahash = { workspace = true }
alloy-primitives = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom-03 = { workspace = true }
