[package]
name = "stroemnet-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stroemnet-protocol = { path = "../protocol" }
ahash = { workspace = true, features = ["serde"] }
futures = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
k256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-consensus-core = { workspace = true }
kaspa-hashes = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-txscript = { workspace = true }
kaspa-txscript-errors = { workspace = true }
kaspa-wrpc-client = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy = { workspace = true, features = ["wasm-bindgen"] }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
gloo-timers = { workspace = true }
wasm-bindgen-futures = { workspace = true }
getrandom-02 = { workspace = true }
getrandom-03 = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
secp256k1 = { workspace = true }
rand = "0.9.2"
