[package]
name = "stroemnet-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-helpers = []

[dependencies]
stroemnet-protocol = { path = "../protocol" }
borsh = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
getrandom-03 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "time", "net"] }
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
