[package]
name = "stroemnet-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tokio = { workspace = true, features = ["sync"] }
gloo-timers = { workspace = true }
getrandom-03 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
