[package]
name = "stroemnet-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stroemnet-node = { path = "../node" }
stroemnet-protocol = { path = "../protocol" }
stroemnet-handler = { path = "../handler" }
stroemnet-p2p = { path = "../p2p" }

ahash = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
alloy-primitives = { workspace = true }
kaspa-addresses = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom-03 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
